Ports/jdk/jdk-jdk-18-10/test/langtools/tools/javac/enum/forwardRef/TestEnum4.out
TestEnum4.java:14:24: compiler.err.illegal.enum.static.ref
1 error
